Fixed card spacing

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ body {
 .book-card {
   display: flex;
   flex-direction: column;
-  justify-content: sp;
+  justify-content: space-evenly;
   align-items: center;
   background-color: white;
   box-shadow: rgba(143, 96, 96, 0.2) 0px 2px 8px 0px;
